--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -56,7 +56,7 @@
                                     <div class="mt-3">
                                         <a class="text-info font-weight-bold" th:href="@{/book/{id}(id=${item.book.id})}" style="text-decoration: none">
                                             <p th:unless="${item.book.title.isBlank()}">
-                                                <strong th:text="${item.book.title.substring(0, T(java.lang.Math).min(item.book.title.length(), __${@environment.getProperty('front-end.cart.title-max-size')}__))}"></strong>
+                                                <strong th:text="${item.book.title.substring(0, T(java.lang.Math).min(item.book.title.length(), __${@environment.getProperty('fm.front-end.cart.title-max-size')}__))}"></strong>
                                             </p>
                                             <p th:if="${item.book.title.isBlank()}">
                                                 <small><i>unknown title</i></small>
@@ -65,11 +65,11 @@
                                     </div>
                                     <!-- authors -->
                                     <div th:unless="${item.book.authors.size() eq 0}" th:each="author,stats : ${item.book.authors}">
-                                        <p th:if="${stats.index < __${@environment.getProperty('front-end.cart.authors-max')}__}" class="text-dark small my-1">
+                                        <p th:if="${stats.index < __${@environment.getProperty('fm.front-end.cart.authors-max')}__}" class="text-dark small my-1">
                                             <span th:replace="fragments/components::author"></span>
                                         </p>
-                                        <p th:if="${stats.last && stats.size > __${@environment.getProperty('front-end.cart.authors-max')}__}" class="text-dark font-weight-light mb-1 mt-n1 small">
-                                            <small><span th:text="${stats.size - __${@environment.getProperty('front-end.cart.authors-max')}__}">restOfAuthors</span> more author/s</small>
+                                        <p th:if="${stats.last && stats.size > __${@environment.getProperty('fm.front-end.cart.authors-max')}__}" class="text-dark font-weight-light mb-1 mt-n1 small">
+                                            <small><span th:text="${stats.size - __${@environment.getProperty('fm.front-end.cart.authors-max')}__}">restOfAuthors</span> more author/s</small>
                                         </p>
                                     </div>
                                     <p th:if="${item.book.authors.size() eq 0}">
