--- a/src/main/resources/templates/profileForm.html
+++ b/src/main/resources/templates/profileForm.html
@@ -30,24 +30,24 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><small class="font-weight-lighter">First name</small></span>
                             </div>
-                            <input class="form-control" type="text" id="firstName" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                            <input class="form-control" type="text" id="firstName" th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><small class="font-weight-lighter">Last name</small></span>
                             </div>
-                            <input class="form-control" type="text" id="lastName" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                            <input class="form-control" type="text" id="lastName" th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                             <div class="invalid-feedback">Please fill out this field correctly</div>
                         </div>-->
                                 <!-------------------------------------------------------------------------firstname-->
                                 <div class="form-group">
                                     <label class="mt-1" for="firstName">First Name:</label>
-                                    <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="enter firstName" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                                    <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="enter firstName" th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('firstName')"></div>
                                 <!------------------------------------------------------------------------- phone -->
                                 <div class="form-group">
                                     <label for="phone">Phone Number:</label>
-                                    <input class="form-control" type="text" th:field="*{phone}" id="phone" placeholder="enter your phone number" th:pattern="${@environment.getProperty('validation.regex.phone')}">
+                                    <input class="form-control" type="text" th:field="*{phone}" id="phone" placeholder="enter your phone number" th:pattern="${@environment.getProperty('fm.validation.regex.phone')}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('phone')"></div>
@@ -56,7 +56,7 @@
                                 <!-------------------------------------------------------------------------lastname-->
                                 <div class="form-group">
                                     <label class="mt-1" for="lastName">Last Name:</label>
-                                    <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="enter lastName" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                                    <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="enter lastName" th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('lastName')"></div>
@@ -77,7 +77,7 @@
                                 <div class="input-group mb-3">
                                     <!-- year -->
                                     <select class="custom-select" th:field="*{year}" id="year" >
-                                        <option th:each="y : ${T(java.util.stream.IntStream).rangeClosed(__${@environment.getProperty('validation.numeric.profile-min-year')}__,T(java.time.Year).now().getValue()).boxed().sorted(T(java.util.Collections).reverseOrder()).collect(T(java.util.stream.Collectors).toList())}"
+                                        <option th:each="y : ${T(java.util.stream.IntStream).rangeClosed(__${@environment.getProperty('fm.validation.numeric.profile-min-year')}__,T(java.time.Year).now().getValue()).boxed().sorted(T(java.util.Collections).reverseOrder()).collect(T(java.util.stream.Collectors).toList())}"
                                                 th:value="${y}"
                                                 th:text="${y}">
                                         </option>
