--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -154,6 +154,7 @@
         <script th:src="@{/js/enableTooltips.js}"></script>
         <!-- ajax cart -->
         <a th:href="@{/login}" id="loginLink" style="display: none"></a>
+        <i th:replace="fragments/components::host-address"></i>
         <script th:src="@{/js/ajaxCart.js}"></script>
     </body>
 </html>
