--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -178,6 +178,7 @@
             <footer th:replace="fragments/components::footer"></footer>
         </div>
         <!-- checkout -->
+        <i th:replace="fragments/components::host-address"></i>
         <script th:src="@{/js/checkout.js}"></script>
     </body>
 </html>
