--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -129,6 +129,7 @@
         <script th:src="@{/js/enableTooltips.js}"></script>
         <script th:src="@{/js/typeWriter.js}"></script>
         <!-- ajax add book to cart -->
+        <i th:replace="fragments/components::host-address"></i>
         <a th:href="@{/login}" id="loginLink" style="display: none"></a>
         <script th:src="@{/js/ajaxAddBook.js}"></script>
         <!-- pagination -->
