--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -42,7 +42,7 @@
                                 </li>
                                 <!--user links-->
                                 <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
-                                    <a class="nav-link text-white font-weight-bold" th:href="@{/user/orders}">Orders</a>
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/user/orders}">My Purchases</a>
                                 </li>
                                 <li class="nav-item dropdown" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
@@ -67,7 +67,7 @@
                                     <a class="nav-link text-white font-weight-bold" th:href="@{/admin/users}">Users</a>
                                 </li>
                                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/purchases}">Purchases</a>
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/orders}">Orders</a>
                                 </li>
                                 <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">Settings</a><!--id="navbardrop"-->
@@ -154,6 +154,10 @@
         <!-- Cancel button (toHome) -->
         <a th:fragment="cancelButtonToHome" class="btn btn-secondary px-5 my-3 text-white" th:href="@{/home}">Cancel</a>
 
+        <!-- host address -->
+        <i th:fragment="host-address" id="host" th:attr="host-address=${@environment.getProperty('fm.host-address')}"></i>
+
+        <!-- contactUs -->
         <span th:fragment="contactUs">If you need help, please contact us at <span class="text-info" th:text="${@environment.getProperty('fm.mail.address')}">email</span></span>
 
         <div th:fragment="addButton(action)">
@@ -209,6 +213,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- modal action -->
+        <i th:fragment="modal-action(action)" id="action" th:attr="modal-action=${action}"></i>
 
         <!-- pagination links -->
         <div th:fragment="paginationLinks" class="d-flex justify-content-center" id="pagination">
